# Swanki

./: .dendron.ws  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  Bishop_CH2.pdf Bioshop_CH2_out.md  CHANGELOG.md  CLAUDE.md  Luo_2020.md  Luo_2020_0.md  Makefile  README.md  REFACTOR_README.md  dendron.code-workspace  dendron.yml  draft.md  jce_conv.md  manim-test.py  pyproject.toml  swanki-gilahyper.code-workspace  swanki.code-workspace
.claude/: settings.json  settings.local.json
Dendron-Template/: __main__.py
docs/: README.md  changelog.md  cli-usage.md  conf.py  configuration.md  contributing.md  index.rst  installation.md  introduction.md  pipeline.md  quickstart.md  requirements.txt
env/: requirements.txt  swanki-mineru-requirements.txt
notes/: .dendron.cache.json  Paper.md  anki.headless-sync.md  anki.vscode-example.md  audio-decoupling-from-cards.plan-0.md  config-refactor-discussion.md  config-refactor-less-clunky.plan-0.md  lecture-transcript-refactor.plan-0.md  optional-create-cards-per-char.plan-0.md  paper.Abstract.md  paper.Discussion.md  paper.Introduction.md  paper.methods.md  paper.pipeline.md  plan.abs-crud-core-module.2026.06.09.md  plan.audio-bookend-pauses-conceptual-prompt.2026.05.30.md  plan.audio-chunk-retention-pause-transitions.2026.04.16.md  plan.audio-decoupling-from-cards.plan-0.md  plan.audio-quality-vision.md  plan.audio-reading-correctness-critic.2026.07.21.md  plan.bit-string-verbalizer-hamming-annotations.2026.05.29.md  plan.bookend-shorthand-and-chapter-rendering.2026.05.19.md  plan.clean-pdf.md  plan.config-refactor-less-clunky.plan-0.md  plan.delivery-subsystem-source-target-sync.2026.06.04.md  plan.exact-chunk-time-mapping-audio-fix-from-annotations.2026.05.18.md  plan.fish-restart-supervisor-slurm-job.2026.06.08.md  plan.fix-cloze.md  plan.glossary-definition-cards-gre-wordlist.2026.05.21.md  plan.hamming-chapter-1-audio-two-track-fixes.2026.05.17.md  plan.hamming-lecture-audio-quality-fixes.2026.05.13.md  plan.hamming-lecture-audio-quality-fixes.2026.05.14.md  plan.instructor-to-pydanticAI.md  plan.instructor-to-pydanticAI.plan-0.md  plan.instructor-to-pydanticAI.wip.md  plan.lecture-transcript-refactor.plan-0.md  plan.major-refactor-sequence-cleanup.plan-0.md  plan.major-refactor-sequence-cleanup.wip.md  plan.major-refactor-sequence.plan-0.md  plan.mc-matching-tf-completion-enumeration.2026.05.04.md  (+207 more)
scripts/: _swanki_zotero_artifacts.py  _zotero_mvll_probe.py  abs_bookmarks.py  abs_clean_stale_chapters.py  abs_clear_bookmarks.py  abs_enrich_metadata.py  abs_refresh.sh  abs_set_chapter_titles.py  abs_setup_collections.py  abs_setup_libraries.py  abs_sync_zotero_collections.py  anki_add_feedback_field.py  book_solution_pack.py  clone_voice_from_youtube.py  dendron-tree.sh  fix_hamming_ch1_reading.py  fix_hamming_lecture_ch04_ch05.py  free-gpu-for-mineru.sh  lo_thesis_retro_publish.sh  nest_run_dirs.sh  publish_regen_to_abs.sh  push_campagne_lecture_fix.sh  regen_campagne_lecture_chunks.py  regen_card_audio_side.py  regen_card_audio_side.sbatch  regen_hamming_bookends_ch1_10.py  regen_juuti.sh  republish_fixed_lectures.sh  retts_cleaned_transcripts.py  run_lo_thesis_batch.sh  run_mineru_swanki.py  schaum_chapter_pack.py  setup-mineru-env.sh  setup-worktree.sh  slurm_cutover.sh  surgical_rechunk.py  swanki-queue.service  swanki_abs_sync.py  swanki_anki_sync.py  swanki_audio_edit.py  (+16 more)
swanki-out-APPA.0/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-APPA.1/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-APPB.0/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-APPC.0/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Bechtel-AFTW/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Bechtel-CH01/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Bechtel-CH02/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Bechtel-CH03/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Bechtel-CH04/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Bechtel-CH05/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Bechtel-CH06/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Bechtel-CH07/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-CH06.0/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-CH07.0/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-CH08.0/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-CH1/: swanki-out-manual.md  swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-CH2/: swanki-out.md
swanki-out-CH2.1/: questions.md  swanki-out-manual.md  swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-CH3/: transcript-clean-output.md  transcript-clean-output_listened-to-pretty-good.md  transcript-clean-output_previously-good.md  transcript-output.md
swanki-out-CH3.1/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-CH4.0/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-CH5.0/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-Collin-Flow-Mechanics/: swanki-out.md  transcript-clean-output.md  transcript-input.md  transcript-output.md
swanki-out-GNN_Nat_Rev_Primer/: swanki-out.md  transcript-clean-output.md  (+2 more)
(+2931 files in other folders)
